# algo-pqc-kit

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
algo_pqc_kit/: __init__.py  multisig.py  vault.py
artifacts/: test_committee_0.json  test_committee_1.json  test_committee_2.json
contracts/: FalconVault.approval.puya.map  FalconVault.approval.teal  FalconVault.arc56.json  PQCDao.approval.puya.map  PQCDao.approval.teal  PQCDao.arc56.json  falcon_lsig.py  falcon_vault.py  pqc_dao.py
contracts/artifacts/: FalconVault.approval.puya.map  FalconVault.approval.teal  FalconVault.arc56.json  PQCDao.approval.puya.map  PQCDao.approval.teal  PQCDao.arc56.json
docs/: deployments.md  pypi_publish.md
examples/: 01_account.py  02_vault.py  03_dao.py  04_trelyan_interop.py  1_generate_account.py
scripts/: deploy.py  deploy_testnet.py
sdk/: __init__.py  account.py  vault.py
tests/: test_account.py  test_dao_v2.py  test_multisig.py  test_vault_v2.py
